Fix: Fixed 'Why to use Trackit' section overlapping titles

--- a/src/App.css
+++ b/src/App.css
@@ -274,7 +274,7 @@ div.asciinemaPlayer h1 {
 .whyTrackitReason h3 {
   font-size: 2em;
   height: 2em;
-  width: 130%;
+  width: 120%;
   height: min-content;
 }
 
